@@ -30,6 +30,9 @@ void *en_mac_binding_aging_waker_init(struct engine_node *node,
                                       struct engine_arg *arg);
 void en_mac_binding_aging_waker_cleanup(void *data);
 
+/* The MAC binding aging helper function. */
+unsigned int min_mac_binding_age_threshold(const char *opt);
+
 /* The FDB aging node functions. */
 void en_fdb_aging_run(struct engine_node *node, void *data);
 void *en_fdb_aging_init(struct engine_node *node, struct engine_arg *arg);
