@@ -5,6 +5,8 @@ Post v23.09.0
     connection method and doesn't require additional probing.
     external_ids:ovn-openflow-probe-interval configuration option for
     ovn-controller no longer matters and is ignored.
+  - Support CIDR based MAC binding aging threshold. See ovn-nb(5) for
+    'mac_binding_age_threshold' for more details.
 
 OVN v23.09.0 - 15 Sep 2023
 --------------------------
